# bookkeeper-permissions

./: .gitignore  LICENSE  README.md  bookkeeper-permissions.cabal  stack.yaml
src/Bookkeeper/: Permissions.hs
src/Bookkeeper/Permissions/: Examples.hs
